--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "@monorepo/api",
+  "name": "@eben4real/api",
   "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@monorepo/utils": "^0.3.0"
+    "@eben4real/shared": "*",
+    "express": "^5.1.0",
+    "lodash": "^4.17.21"
   },
   "type": "module",
-  "gitHead": "f1ed4f2830fc29f8d446e942a6d170a25df07872"
+  "gitHead": "b236676d2faf13970eb751f1b087b8a27e7b2329"
 }
