--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eben4real/ui",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "type": "module",
   "gitHead": "b236676d2faf13970eb751f1b087b8a27e7b2329",
   "dependencies": {
-    "@eben4real/shared": "*",
+    "@eben4real/shared": "^0.4.0",
     "react": "^19.1.1"
   }
 }
