--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,5 +27,6 @@
   },
   "bugs": {
     "url": "https://github.com/EBEN4REAL/monorepo-workflows/issues"
-  }
+  },
+  "gitHead": "f2221ab69157eafe518995233f424ad49a9c7491"
 }
