--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "MIT",
   "type": "module",
-  "gitHead": "b236676d2faf13970eb751f1b087b8a27e7b2329",
+  "gitHead": "f2221ab69157eafe518995233f424ad49a9c7491",
   "dependencies": {
     "@eben4real/shared": "^0.4.0",
     "react": "^19.1.1"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   }
 }
