--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.6.1"
+  "version": "0.6.1",
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
